<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_0.45"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_0.55"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintDimensionRatio="3567:6133"
        app:layout_constraintVertical_bias="0.3"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tips"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt_con_tip"
        android:textColor="@color/main_activity_title_color"
        android:textAlignment="gravity"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.6"
        />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_bt"
        android:text="@string/cancel"
        android:textColor="@color/main_activity_title_color"
        android:textAlignment="center"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        app:layout_constraintTop_toBottomOf="@id/tips"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline_0.45"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintDimensionRatio="8100:3633"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sure"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/selector_bt"
        android:text="@string/confirm"
        android:textColor="@color/main_activity_title_color"
        android:textAlignment="center"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        app:layout_constraintTop_toTopOf="@id/cancel"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline_0.55"
        app:layout_constraintBottom_toBottomOf="@id/cancel"
        app:layout_constraintDimensionRatio="8100:3633"/>





</androidx.constraintlayout.widget.ConstraintLayout>
